Updating Portfolio vertical centering 'hack' and fixing mediabox firing issue on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -366,6 +366,8 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     scroll-snap-stop: always;
   }
 
+  
+
   .bg-portfolio {
     background: rgb(21,40,55);
     background: radial-gradient(circle, rgba(21,40,55,1) 0%, rgba(13,21,28,1) 100%);
@@ -387,6 +389,8 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     width: 3rem;
   }
 
+  
+
   #portfolio .swiper-slide-active img {
     filter: brightness(100%) !important;
     -webkit-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.25), 0 0 10rem 1rem rgba(255, 255, 255, 0.25), inset 2px 2px 0 rgba(255, 255, 255, 0.25);
@@ -406,6 +410,13 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
       transition: filter 0.75s ease;
       -webkit-transition: box-shadow 2s ease-in-out;
       transition: box-shadow 2.5s ease-in-out;
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    #portfolio .swiper-container {
+      height: 110vh !important;
+      bottom: 10vh !important;
     }
   }
 
